tests/conformance/shaclc/negative/mincount-not-integer.shaclc
PREFIX ex: <http://example.org/test#>

shape ex:TestShape {
	ex:p [*..2] .
}
